# NMesh

./: .gitignore  CLAUDE.md  DOCKER_ROUTING_FIX_PLAN.md  README.md  ROADMAP.md  SECURITY_AUDIT.md  TEST.md  chat.md  claude.md  pyproject.toml  requirements.txt  start.sh
.claude/: settings.local.json
docker/: Dockerfile  Dockerfile.base  docker-compose-routing.yml  docker-compose.yml  entrypoint.sh
scripts/: build_pyz.py  call_demo.py  chat_app.py  chat_demo.py  console_demo.py  example_app.py  nmesh_node.py  run_node.py
src/: __init__.py  app_catalog.py  app_channel.py  app_dht.py  app_package.py  app_storage.py  cert.py  cert_store.py  crypto.py  data_connector.py  dht.py  invite.py  ip_utils.py  lan_discovery.py  metrics.py  net_monitor.py  node.py  node_id.py  packet.py  process_launcher.py  pseudo_dir.py  routing.py  session_store.py  spool.py  spool_transport.py  stun.py  tcp_transport.py  transport.py  transport_manager.py  trust.py  udp_transport.py  uri.py  webassets.py  webconsole.py
tests/: conftest.py  test_app_deploy.py  test_app_dht.py  test_app_storage.py  test_app_store.py  test_call.py  test_cert.py  test_chat_app.py  test_chat_persistence.py  test_chat_social.py  test_chat_state.py  test_chat_web.py  test_connect_exchange.py  test_console_chat.py  test_crypto.py  test_data.py  test_data_connector.py  test_dht.py  test_e2e.py  test_fuzz.py  test_handshake.py  test_hole_punch.py  test_invite.py  test_invite_flow.py  test_invite_seek.py  test_invite_to_handshake.py  test_ip_utils.py  test_ipv6_autonat.py  test_join_block.py  test_kad_bootstrap.py  (+24 more)
(+43 files in other folders)
